# openusd-mcp

./: LICENSE  README.md  pyproject.toml
demo/: index.html
examples/: desk_setup.usda  product_configurator.usda
scripts/: generate_examples.py
src/openusd_mcp/: __init__.py  server.py  tools.py
